fix: task interruption caused by HTTP timeout during RSS updates